# pipifax-modules

pipifax-io/: pyproject.toml
pipifax-io/src/pipifax_io/: cache.py  code_generator.py  dyn_codegen.py  json_serialization.py  serializable.py  type_serializer.py
pipifax-io/src/pipifax_io/pipifax_io/: cache.py  json_serialization.py  serializable.py
pipifax-lengthed-generator/: pyproject.toml
pipifax-lengthed-generator/src/pipifax_lengthed_generator/: __init__.py
pipifax-proxy-manager/: proxy-config.toml  pyproject.toml  sites.json
pipifax-proxy-manager/src/pipifax_proxy_manager/: __init__.py  config.py  proxy_fetchers.py
pipifax-runtime-generics/: README.md  pyproject.toml
pipifax-runtime-generics/src/pipifax_runtime_generics/: __init__.py
