[project]
name = "pipifax_io"
version = "0.0.3"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "psutil",
    # bson is broken
    # "bson"
    "bson @ git+https://github.com/py-bson/bson.git"
]