[project]
name = "pipifax_proxy_manager"
version = "0.0.1"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "urllib3[socks]",
    "pipifax_io"
]
