[project]
name = "pipifax_proxy_manager"
version = "0.0.2"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "urllib3[socks]",
    "pipifax-io@git+https://github.com/Belissimo-T/pipifax-modules.git/#subdirectory=pipifax-io"
]
